@@ -4,6 +4,7 @@ v.1.2
 	Adding date-time format to the auto date-time fields. The format is chosen by the default date format (uk-date , us-date or sql-date).
 	Adding a new uploader. Works with the most common browsers. Internet Explorer 8+, Mozilla Firefox, Google Chrome, Opera, Safari.
 	Changing the interface of the form inputs - just CSS changes.
+	Adding a where clause at the 4th argument to the simple set_relation method.
 	Not supporting Codeigniter 1.7.x anymore.
 	BUG fix - unset_jquery function now works properly.
 	BUG fix #9 - The form's clear functionallity don't work properly after the insert.
